methods.slug.SlugHunting.scala.code
def hunt() {
  while (isfacingtrail()){
    baissebrosse()
    avance()
    levebrosse()
  }
    gauche()
   if  (isfacingtrail){
       baissebrosse()
       avance()
       levebrosse()
       }
 
   else {
     droite()  
     baissebrosse()
     avance()
     levebrosse()
      }
 
}



def isFacingTrail():Boolean = {
    
  var verte: Boolean = false
  if (estFaceMur()){
    return false
  }
  avance()
  verte=getCouleurSol()==Color.green
  
  recule()
  return verte
}